@@ -4,6 +4,8 @@
     ADDED: new krarc (password handling, type autodetection, writing
            out archiver error messages, step into hidden archives,...)
 
+    FIXED: [ 1193239 ] crash at 'Closing Current Session'
+    FIXED: synchronizer is always on the top of the panels
     FIXED: [Debian: 352367] useractions with terminal output ignores configured terminal
     FIXED: last tabs are not saved, if an old config value is present
     FIXED: panel popup gets focus at opening, gives focus to panel at hiding
